@@ -12,13 +12,14 @@ package org.weasis.dicom.rt;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
+import org.weasis.core.api.media.data.TagW;
 import org.weasis.core.util.StringUtil;
+import org.weasis.dicom.codec.DicomMediaIO;
 
 /**
  * @author Tomas Skripcak
  */
-public class Plan {
-
+public class Plan extends RtSpecialElement {
   private String sopInstanceUid;
   private String label;
   private Date date;
@@ -26,7 +27,11 @@ public class Plan {
   private String description;
   private String geometry;
   private Double rxDose;
-  private List<Dose> doses = new ArrayList<>();
+  private final List<Dose> doses = new ArrayList<>();
+
+  public Plan(DicomMediaIO mediaIO) {
+    super(mediaIO);
+  }
 
   public String getSopInstanceUid() {
     return this.sopInstanceUid;
@@ -88,17 +93,9 @@ public class Plan {
     return this.doses;
   }
 
-  public void setDoses(List<Dose> doses) {
-    this.doses = doses;
-  }
-
-  public boolean hasAssociatedDose() {
-    return !this.doses.isEmpty();
-  }
-
   public Dose getFirstDose() {
     if (!this.doses.isEmpty()) {
-      return this.doses.get(0);
+      return this.doses.getFirst();
     }
 
     return null;
@@ -106,20 +103,20 @@ public class Plan {
 
   public void appendName(String text) {
     if (StringUtil.hasText(this.name)) {
-      this.name += " (" + text + ")";
+      this.name += STR." (\{text})";
     } else if (StringUtil.hasText(this.label)) {
-      this.name = this.label + " (" + text + ")";
+      this.name = STR."\{this.label} (\{text})";
     }
   }
 
   @Override
   public String toString() {
-    if (StringUtil.hasText(this.name)) {
-      return this.name;
-    } else if (StringUtil.hasText(this.label)) {
+    if (StringUtil.hasText(this.label)) {
       return this.label;
+    } else if (StringUtil.hasText(this.name)) {
+      return this.name;
     }
-    return StringUtil.EMPTY_STRING;
+    return TagW.NO_VALUE;
   }
 
   @Override
